refactored icons module into images
